Clean up some pre Java-8 code