@@ -16,10 +16,9 @@
 
 package cd.go.contrib.elasticagents.docker;
 
-import com.google.common.base.Predicate;
-import com.google.common.collect.FluentIterable;
-
 import java.util.*;
+import java.util.function.Predicate;
+import java.util.stream.Collectors;
 
 /**
  * Represents a map of {@link Agent#elasticAgentId()} to the {@link Agent} for easy lookups
@@ -29,21 +28,15 @@ public class Agents {
     private final Map<String, Agent> agents = new HashMap<>();
 
     // Filter for agents that can be disabled safely
-    private static final Predicate<Agent> AGENT_IDLE_PREDICATE = new Predicate<Agent>() {
-        @Override
-        public boolean apply(Agent metadata) {
-            Agent.AgentState agentState = metadata.agentState();
-            return metadata.configState().equals(Agent.ConfigState.Enabled) && (agentState.equals(Agent.AgentState.Idle) || agentState.equals(Agent.AgentState.Missing) || agentState.equals(Agent.AgentState.LostContact));
-        }
+    private static final Predicate<Agent> AGENT_IDLE_PREDICATE = metadata -> {
+        Agent.AgentState agentState = metadata.agentState();
+        return metadata.configState().equals(Agent.ConfigState.Enabled) && (agentState.equals(Agent.AgentState.Idle) || agentState.equals(Agent.AgentState.Missing) || agentState.equals(Agent.AgentState.LostContact));
     };
 
     // Filter for agents that can be terminated safely
-    private static final Predicate<Agent> AGENT_DISABLED_PREDICATE = new Predicate<Agent>() {
-        @Override
-        public boolean apply(Agent metadata) {
-            Agent.AgentState agentState = metadata.agentState();
-            return metadata.configState().equals(Agent.ConfigState.Disabled) && (agentState.equals(Agent.AgentState.Idle) || agentState.equals(Agent.AgentState.Missing) || agentState.equals(Agent.AgentState.LostContact));
-        }
+    private static final Predicate<Agent> AGENT_DISABLED_PREDICATE = metadata -> {
+        Agent.AgentState agentState = metadata.agentState();
+        return metadata.configState().equals(Agent.ConfigState.Disabled) && (agentState.equals(Agent.AgentState.Idle) || agentState.equals(Agent.AgentState.Missing) || agentState.equals(Agent.AgentState.LostContact));
     };
 
     public Agents() {
@@ -64,11 +57,11 @@ public class Agents {
     }
 
     public Collection<Agent> findInstancesToDisable() {
-        return FluentIterable.from(agents.values()).filter(AGENT_IDLE_PREDICATE).toList();
+        return agents.values().stream().filter(AGENT_IDLE_PREDICATE).collect(Collectors.toList());
     }
 
     public Collection<Agent> findInstancesToTerminate() {
-        return FluentIterable.from(agents.values()).filter(AGENT_DISABLED_PREDICATE).toList();
+        return agents.values().stream().filter(AGENT_DISABLED_PREDICATE).collect(Collectors.toList());
     }
 
     public Set<String> agentIds() {
